<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>26</version>
        <relativePath/>
    </parent>
    <groupId>org.jboss.resteasy</groupId>
    <artifactId>resteasy-spring-boot-starter-test</artifactId>
    <version>4.8.1.Final</version>
    <name>${project.artifactId}</name>

    <description>Integration test project for RESTEasy Spring Boot starter</description>
    <url>https://github.com/resteasy/resteasy-spring-boot</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Fabio Carvalho</name>
            <email>facarvalho@paypal.com</email>
            <organization>PayPal</organization>
            <organizationUrl>http://www.paypal.com</organizationUrl>
        </developer>
        <developer>
            <name>Alessio Soldano</name>
            <email>alessio.soldano@jboss.com</email>
            <organization>Red Hat</organization>
            <organizationUrl>http://www.redhat.com</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:resteasy/resteasy-spring-boot.git</connection>
        <developerConnection>scm:git:git@github.com:resteasy/resteasy-spring-boot.git</developerConnection>
        <url>git@github.com:resteasy/resteasy-spring-boot.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>jboss-releases-repository</id>
            <name>JBoss Releases Repository</name>
            <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <issueManagement>
        <system>JIRA</system>
        <url>http://jira.jboss.com/jira/browse/RESTEASY</url>
    </issueManagement>

    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <modular.jdk.args/>
        <modular.jdk.props/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>spring-boot-sample-app</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>spring-boot-sample-app-no-jaxrs-application</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>3.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>JDK9</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <modular.jdk.args>
                    --add-modules=java.se
                </modular.jdk.args>
                <modular.jdk.props>
                    --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                </modular.jdk.props>
                <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
            </properties>
        </profile>
        <!-- Added for Fortify Support -->
        <profile>
            <id>fortify</id>
            <activation></activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.fortify.ps.maven.plugin</groupId>
                        <artifactId>sca-maven-plugin</artifactId>
                        <version>4.22</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Added for Fortify Support -->
                <plugin>
                    <groupId>com.fortify.ps.maven.plugin</groupId>
                    <artifactId>sca-maven-plugin</artifactId>
                    <configuration>
                        <source>1.8</source>
                        <maxHeap>1G</maxHeap>
                    </configuration>
                    <executions>
                        <execution>
                            <id>sca-clean</id>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>sca-translate-exec</id>
                            <goals>
                                <goal>translate</goal>
                            </goals>
                        </execution>
                    </executions>
                    <version>4.22</version>
                </plugin>
                <!-- End Added For Fortify Support -->
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>${modular.jdk.args} ${modular.jdk.props}</argLine>
                    <forkMode>always</forkMode>
                    <systemPropertyVariables>
                        <user.language>en</user.language>
                        <user.region>GB</user.region>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>failsafe-integration-tests</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
